kustomize/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novdan-frontend
  labels:
    app: novdan-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: novdan-frontend
  template:
    metadata:
      labels:
        app: novdan-frontend
    spec:
      containers:
        - name: novdan-frontend
          image: novdan-frontend
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
            limits:
              memory: 500Mi
              cpu: 250m
