kustomize/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: novdan-frontend
spec:
  selector:
    app: novdan-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
