kustomize/frontend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-www
spec:
  redirectRegex:
    regex: ^https?://www.novdan.si/(.*)
    replacement: https://novdan.si/${1}
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novdan-frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      novdan-redirect-www@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - novdan.si
        - www.novdan.si
      secretName: novdan-frontend-tls
  rules:
    - host: novdan.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novdan-frontend
                port:
                  number: 3000
    - host: www.novdan.si
      http: *http_paths
